prizes fixed on safari

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -190,7 +190,7 @@ input[type="submit"] {
 }
 
 /* Styling for the red "rounded-row" tables. */
-.rounded-table, .schedule-table {
+.rounded-table, .schedule-table { /*whole table*/
 	width: 100%;
 	color: var(--faded-white-glass);
 	background: var(--blood-glass);
@@ -202,21 +202,24 @@ input[type="submit"] {
 		box-shadow: none;
 	}
 	tbody {
-		&:first-child th {
+		&:first-child th { /*top dark bar*/
 			padding: var(--pad-weeny);
 			font-size: var(--font-slight);
 			background: var(--maroon);
 		}
-		tr {
-			th:first-child, td:first-child {
+		tr { 
+			th:first-child, td:first-child { /*left side (prize)*/
+				border: red solid 3px;
 				border-top-left-radius: var(--radius);
 				border-bottom-left-radius: var(--radius);
 			}
-			th:last-child, td:last-child {
+			th:last-child, td:last-child { /*green stuff on right*/
+				border: green solid 3px;
 				border-top-right-radius: var(--radius);
 				border-bottom-right-radius: var(--radius);
 			}
-			td {
+			td {  /*middle stuff*/
+				border: blue solid 3px;
 				background: var(--blood);
 				font-size: var(--font-medium);
 				text-align: center;
@@ -296,7 +299,7 @@ input[type="submit"] {
 	}
 }
 .claim-button{
-	min-width: 10em
+	min-width: 10em;
 }
 
 
@@ -876,7 +879,15 @@ this is so hamburger menu does not show for safari*/
 		color: var(--faded-white-glass);
 		background: var(--blood-glass);
 		border-spacing: 0;
-		/* border-radius: 100%; */
+		border-radius: var(--radius);
+		box-shadow: var(--shadow);
+	}
+	#prizes-content{
+		width: 100%;
+		color: var(--faded-white-glass);
+		background: var(--blood);
+		border-spacing: 0;
+		border-radius: var(--radius);
 		box-shadow: var(--shadow);
 	}
 	.rounded-table, .schedule-table.no-color {
@@ -888,6 +899,12 @@ this is so hamburger menu does not show for safari*/
 		font-size: var(--font-slight);
 		background: var(--maroon);
 	}
+	#prizes-content tr:first-child{
+		padding: var(--pad-weeny);
+		font-size: var(--font-slight);
+		background: var(--maroon);
+	}
+
 	.rounded-table, .schedule-table tbody tr th:first-child, td:first-child {
 		border-top-left-radius: var(--radius);
 		border-bottom-left-radius: var(--radius);
@@ -896,14 +913,45 @@ this is so hamburger menu does not show for safari*/
 		border-top-right-radius: var(--radius);
 		border-bottom-right-radius: var(--radius);
 	}
+
+	#prizes-content tr th:first-child {
+		border-top-left-radius: var(--radius);
+		border-bottom-left-radius: var(--radius);
+	}
+	#prizes-content tr th:last-child {
+		border-top-right-radius: var(--radius);
+		border-bottom-right-radius: var(--radius);
+	}
+	#prizes-content tr td:first-child {
+		border-top-left-radius: var(--radius);
+		border-bottom-left-radius: var(--radius);
+	}
+	#prizes-content tr td:last-child {
+		border-top-right-radius: var(--radius);
+		border-bottom-right-radius: var(--radius);
+	}
+	
 	.rounded-table, .schedule-table tbody tr td {
 		background: var(--blood);
+		font-size: var(--font-medium);
+		text-align: center;
+	}
+	#prizes {
+		background: var(--blood-glass);
 		font-size: var(--font-medium);
 		text-align: center;
 	}
 	.rounded-table, .schedule-table .table-spacer {
 		height: var(--pad-teeny);
 	}
+
+
+
+
+
+
+
+
 	/* announcements */
 	.announcement, .log {
 		margin: var(--pad-tiny);
@@ -1092,6 +1140,50 @@ this is so hamburger menu does not show for safari*/
 		}
 	}
 
+	/*prizes in supports */
+
+	#balance {
+		margin-top: var(--pad-medium);
+		text-align: right;
+		color: var(--faded-white-glass);
+	}
+	#balance #points {
+		padding: 0 2em;
+	}
+	
+	#prizes td {
+		padding: var(--pad-tiny) 0;
+	}
+	#prizes td .claim {
+		padding: var(--pad-tiny) var(--pad-small);
+		margin: var(--pad-small) 0;
+		color: var(--faded-white-glass);
+		font-size: var(--font-medium);
+		text-align: center;
+		background: var(--blue-purple);
+		border: none;
+		border-radius: var(--radius);
+	}
+	#prizes td .claim:hover {
+		cursor: pointer;
+	}
+	#prizes td .claim .claimed {
+		background: gray;
+		
+	}
+	#prizes td .claim .retrieved:hover {
+		cursor: default;
+	}
+	#prizes td .claim .retrieved {
+		background: gray;
+	}
+	#prizes td .claim .retrieved:hover {
+		cursor: default;
+	}
+	.claim-button{
+		min-width: 10em;
+	}
+
     @media screen and (min-width:300px) and (max-width:880px)  {
         
 		.link{
@@ -1147,7 +1239,33 @@ this is so hamburger menu does not show for safari*/
 			width: 30px;
 			height: 30px;
 		}
-
+		/* prizes */
+		.prizes-container{
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: column;
+		}
+		.claim{
+			font-size: small;
+			padding: 1em;
+		}
+		.claim-button{
+			min-width: 3em;
+			font-size:small;
+			margin: 1em;
+		}
+		#prizes tr{
+			align-self: center;
+		}
+		#prizes td{
+			font-size: small;
+			margin: var(--pad-tiny) 0;
+		}
+		.claimed, .retrieved {
+			margin: 10px !important;
+		}
+		/*End prizes*/
     }
 }
 /*End Safari Filter*/
